# CommonCrawl-CreativeCommons

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
configs/: config-local.yaml  example-config-local.yaml  example-config-slurm.yaml  example-upload-config-local.yaml  example-upload-config-slurm.yaml  upload-config-slurm.yaml
scripts/: add_english_fw.py  aggregate_stats.py  annotate_id_exists.py  build_duckdbs.py  build_duckdbs.sh  build_id_duckdb.py  download_warc_html.py  run_local.py  run_slurm.py  upload.py  upload_all.sh  upload_local.py  upload_slurm.py
scripts/analysis/: add_docs_tokens_counts.py  benchmark_license_finder.py  download_warc_html.py  find_docs_tokens_counts.py  find_top_domains.py  get_log_avg_time_stats.py  manual_annotation_app.py  slurm_check_completed.py
scripts/post_processing/: add_fineweb_containment.py  create_fine_version.py  create_language_balanced_subset.py  create_recommended.py  remove_copyrighted_domains.py  train_topic_classifier.py
scripts/post_testing/: test_hub_download.py
scripts/preparation/: auto_restart_duckdbs.slurm  auto_retrying_build_duckdbs.sh  build_duckdbs.py  get_duckdb_fw2_sizes.py
slurm/: launch.slurm  upload.slurm
src/c5/: data_utils.py  script_utils.py  utils.py
src/c5/components/: slurm_executor.py
src/c5/components/annotators/: __init__.py  db_containment_annotator.py  db_containment_annotator_single.py  html_copier.py  license_annotator.py
src/c5/components/filters/: __init__.py  content_filters.py  language_filter_with_ignore.py  license_filter.py
src/c5/components/readers/: __init__.py  retry_warc.py  robust_jsonl.py
src/commoncrawl_cc_annotation/: data_utils.py  script_utils.py  utils.py
src/commoncrawl_cc_annotation/components/annotators/: __init__.py  base.py  db_containment_annotator.py  html_copier.py  license_annotator.py
src/commoncrawl_cc_annotation/components/filters/: empty_text_filter.py
src/gpt_nl_copyright/: copyright_finder.py  script_utils.py  utils.py  version.py
src/gpt_nl_copyright/components/: column_filter.py  copyright.py  html_copier.py
src/gpt_nl_copyright/components/annotator/: base.py  copyright_annotator.py  html_annotator.py  license_annotator.py
src/gpt_nl_copyright/components/filters/: empty_text_filter.py  lang_mtd_filter.py  license_filter.py
tests/: test_bs4_casing.py  test_license_annotator.py  test_script_utils.py
